learning tokio tutorial io shared-state  channels

--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -3,9 +3,9 @@
 members = [
     "hello-tokio",
     "spawning",
-    # "shared-state",
-    # "channels",
-    # "io",
+    "shared-state",
+    "channels",
+    "io",
     # "mini-tokio",
     # "streams",
 ]
